--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,6 +12,9 @@
         <item
             android:id="@+id/menukontaktai"
             android:title="Kontaktai" />
+        <item
+            android:id="@+id/Paskyra"
+            android:title="Paskyra" />
 
 
     </group>
