--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -36,7 +36,7 @@
         android:minHeight="30dp"
         android:padding="13dp"
         android:layout_marginTop="45dp"
-        android:text="Slaptazodis"
+        android:text="Slaptažodis"
         android:background="@drawable/edittext_background"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
         android:minHeight="30dp"
         android:padding="13dp"
         android:background="@drawable/edittext_background"
-        android:text="Pastas"
+        android:text="Paštas"
         android:layout_marginTop="45dp"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:background="@drawable/edittext_background"
         android:minHeight="30dp"
         android:padding="13dp"
-        android:text="Pavarde"
+        android:text="Pavardė"
         android:layout_marginTop="45dp"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,12 +81,12 @@
         android:ems="10"
         android:minHeight="30dp"
         android:padding="10dp"
-        android:textStyle="bold"
-        android:textAlignment="center"
         android:text="Vardas"
-        app:layout_constraintEnd_toEndOf ="parent"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView16"
@@ -98,7 +98,7 @@
         android:padding="10dp"
         android:textStyle="bold"
         android:textAlignment="center"
-        android:text="Pavarde"
+        android:text="Pavardė"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/snamee"/>
@@ -113,7 +113,7 @@
         android:textStyle="bold"
         android:padding="10dp"
         android:textAlignment="center"
-        android:text="Slaptazodis"
+        android:text="Slaptažodis"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/passwordd"/>
@@ -128,7 +128,7 @@
         android:minHeight="30dp"
         android:padding="10dp"
         android:textAlignment="center"
-        android:text="Pastas"
+        android:text="Elektroninis paštas"
         app:layout_constraintEnd_toEndOf ="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/emaill"/>
